2009-01-05  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #9506: label uid shows not working 
	* Fixed bug #10056: Misspelling english word "guesbooks" 

2009-01-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9052: Remove JS popup when login expired (co-authored with Christoph Koehler and Steffen Kamper)

2009-01-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10047: typo3/contrib is not prefixed with config.absRefPrefix
	* Fixed bug #10049: ExtJS directory structure is broken

2009-01-02  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #10043: removed deprecated function-calls in openid

2009-01-01  Steffen Kamper  <info@sk-typo3.de> 

	* Fixed bug #4690: TCAdefaults.tt_content.imagecols = 1 is missing
	* Fixed bug #7922: stdWrap for doNotLinkIt & doNotShowLink

2009-01-01  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8590: Fileadmins folderoverview don`t show 'B' (for byte) after filesize (Thanks to Stefano Kowalke)
	* #7669: Changed elderly while(list()=each()) to foreach calls in t3lib_tstemplate (Credits Oliver Hader) 
	* Fixed bug #8361: Stage change notification emails not send when publishing from Live workspace (Thanks to Andreas Wolf)
	* Fixed bug #9136: Less JS in backend.php / Framehandling problem

2008-12-30  Oliver Hader  <oliver@typo3.org>

	* Added feature #5610: Extend TCEFORM_confObj on Page TSconfig by property keepItems

2008-12-29  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8746: Date/time field problem with timezone shifting when using the "+NN", "d" or "d+NN" shortcuts
	* Fixed bug #10033: Date/time field shortcut "d" doesn't work on already filled date fields since 4.2.0
	* Fixed issue that on a datetime field entering just a "date" wasn't possible: It is now, and time will be set to "0:00"

2008-12-29  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10022: Pagecontent/Hidden has no effect
	* Added feature #9901: Enable stdWrap for expAll

2008-12-29  Oliver Hader  <oliver@typo3.org>
